[package]
name = "ptyprocess"
version = "0.1.9"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2018"
description = "A library for cutting a string while preserving colors."
repository = "https://github.com/zhiburt/ptyprocess"
documentation = "https://docs.rs/ptyprocess"
homepage = "https://github.com/zhiburt/ptyprocess"
license = "MIT"
readme = "README.md"
keywords = ["PTY", "TTY", "pty", "tty", "fork"]
categories = ["development-tools"]

[features]
default = ["sync"]
sync = []
async = ["async-io", "futures-lite", "pin-project"]

[dependencies]
nix = "0.21.0"
async-io = { version="1.6.0", optional=true }
futures-lite = { version="1.12.0", optional=true }
pin-project = { version="1.0.7", optional=true }
