[package]
name = "ptyprocess"
version = "0.2.0"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2018"
description = "A library for cutting a string while preserving colors."
repository = "https://github.com/zhiburt/ptyprocess"
documentation = "https://docs.rs/ptyprocess"
homepage = "https://github.com/zhiburt/ptyprocess"
license = "MIT"
readme = "README.md"
keywords = ["PTY", "TTY", "pty", "tty", "fork"]
categories = ["development-tools"]

[dependencies]
nix = "0.21.0"
