[package]
name = "ptyprocess"
version = "0.3.1"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2018"
description = "A library to work with PTY/TTY on Unix systems"
repository = "https://github.com/zhiburt/ptyprocess"
documentation = "https://docs.rs/ptyprocess"
homepage = "https://github.com/zhiburt/ptyprocess"
license = "MIT"
readme = "README.md"
keywords = ["pty", "tty", "terminal"]
categories = ["development-tools", "command-line-interface"]

[dependencies]
nix = "0.26"
